# dynamixel_playground

dynamixel_playground/: CMakeLists.txt  package.xml
dynamixel_workbench_practice/: CMakeLists.txt  package.xml
dynamixel_workbench_practice/config/: 2xl.yaml  basic.yaml  torque_off_master.yaml  xm_single.yaml
dynamixel_workbench_practice/include/dynamixel_workbench_practice/: master_slave_joint_traj.h  master_slave_service.h  sin_sub.h
dynamixel_workbench_practice/launch/: dynamixel_controllers.launch  dynamixel_controllers_2xl.launch  dynamixel_controllers_xm540.launch
dynamixel_workbench_practice/scripts/: master_slave.py  master_slave_joint_traj.py  master_slave_joint_traj_new.py  master_slave_service.py  master_slave_srv.py
dynamixel_workbench_practice/src/: master_slave_joint_traj.cpp  master_slave_service.cpp  sin_pub.cpp  sin_sub.cpp
